[package]
name = "ramen"
version = "0.1.0"
authors = ["viri <hi@viri.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.parking_lot]
optional = true
version = "0.11"

[features]
default = []
parking-lot = ["parking_lot"]
