[package]
name = "ramen"
version = "0.0.2"
authors = ["viri <hi@viri.moe>"]
edition = "2018"
description = "Cross-platform windowing crate, built for performance."
documentation = "https://docs.rs/ramen"
readme = "README.md"
# homepage = "https://some.website/ramen"
repository = "https://github.com/notviri/ramen/"
license = "Zlib"
# keywords = []
# categories = []
include = ["src/**/*.rs", "Cargo.toml", "LICENSE.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.parking_lot]
optional = true
version = "0.11"

[features]
default = []
cursor-lock = []
parking-lot = ["parking_lot"]

[package.metadata.docs.rs]
features = ["nightly-docs"]
